--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,8 @@ build/Release
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules
-.idea
+
+$mv gitignore .gitignore 
+[root@~/workspace]
+$git status
+# On branch master
